Fix: Corregir z-index y posicionamiento del floating contact

--- a/src/styles/components/contact/floating.module.scss
+++ b/src/styles/components/contact/floating.module.scss
@@ -1,19 +1,17 @@
 .root {
     position: fixed;
-    width: 100%;
-    height: 100%;
+    bottom: 20px;
+    right: 20px;
+    width: 10rem;
+    width: 15rem;
     display: flex;
     flex-wrap: wrap-reverse;
     flex-direction: row-reverse;
-    z-index: 999;
+    z-index: 2;
     &>div {
-        position: absolute;
-        width: 10rem;
-        height: 15rem;
         display: flex;
         flex-direction: column;
         gap: 0.3rem;
-
         .up {
             display: flex;
             flex-direction: row;
